--- a/apps/playground/public/locales/fa.json
+++ b/apps/playground/public/locales/fa.json
@@ -6,6 +6,9 @@
     "base.feature.login.button": "ورود",
     "base.feature.login.username": "نام کاربری",
     "base.feature.login.password": "رمز عبور",
-    "base.feature.login.rememberMe": "مرا به خاطر بسپار"
+    "base.feature.login.rememberMe": "مرا به خاطر بسپار",
+    "base.feature.dialog.open": "باز کردن دیالوگ",
+    "base.feature.dialog.cancelButtonDefault": "انصراف",
+    "base.feature.dialog.saveButtonDefault": "ذخیره"
   }
 }
