wip add translations

--- a/apps/playground/public/locales/fa.json
+++ b/apps/playground/public/locales/fa.json
@@ -26,6 +26,46 @@
     "base.feature.dialog.input.noButton": "خیر، لغو گردد",
     "base.feature.dialog.input.yesButton": "بله، تایید می‌کنم",
     "base.feature.imageUploader.noFetchFnError": "No fetchFn provided",
-    "base.feature.imageUploader.noUploadFnError": "No uploadFn provided"
+    "base.feature.imageUploader.noUploadFnError": "No uploadFn provided",
+    "base.feature.table.filterMenu.submitButton": "فیلتر",
+    "base.feature.table.filterMenu.cancelButton": "لغو",
+    "base.feature.table.filters.contains": "دارای مقدار",
+    "base.feature.table.filters.equals": "برابر با",
+    "base.feature.table.filters.greaterThan": "بیشتر از",
+    "base.feature.table.filters.lowerThan": "کمتر از",
+    "base.feature.table.formMenu.caption": "مشخصات را وارد کنید و دکمه ثبت را بزنید",
+    "base.feature.table.formMenu.cancelButton": "لغو",
+    "base.feature.table.formMenu.submitButton": "ثبت",
+    "base.feature.table.formMenu.editText": "تغییر دادن",
+    "base.feature.table.formMenu.newText": "جدید",
+    "base.feature.table.formMenu.addText": "اضافه",
+    "base.feature.table.header.bulkActionLabel": "عمل مورد نیاز",
+    "base.feature.table.header.bulkActionPlaceholder": "انتخاب",
+    "base.feature.table.header.bulkActionApply": "اعمال",
+    "base.feature.table.header.selection.XoutOfI": "از",
+    "base.feature.table.header.selection.isSelected": "انتخاب شده است",
+    "base.feature.table.header.exportExcel": "خروجی اکسل",
+    "base.feature.table.header.print": "پرینت",
+    "base.feature.table.header.addText": "اضافه کردن",
+    "base.feature.table.emptyValue": "-",
+    "base.feature.table.addText": "اضافه کردن",
+    "base.feature.table.editText": "تغییر دادن",
+    "base.feature.table.newText": "جدید",
+    "base.feature.table.TrueText": "بله",
+    "base.feature.table.falseText": "خیر",
+    "base.feature.table.activeText": "فعال",
+    "base.feature.table.inactiveText": "غیرفعال",
+    "base.feature.table.cellFormatting.total": "تعداد کل",
+    "base.feature.table.cellFormatting.hours": "ساعت",
+    "base.feature.table.cellFormatting.hoursAnd": "ساعت و",
+    "base.feature.table.cellFormatting.minutes": "دقیقه",
+    "base.feature.table.cellFormatting.date": "تاریخ",
+    "base.feature.table.cellFormatting.plateCountry": "ایران",
+    "base.feature.table.createDialog.subtitle": "مشخصات را وارد کنید و دکمه ذخیره را بزنید",
+    "base.ui.loaderScreen.error": "در بارگزاری مشکلی به وجود آمد، لطفا دوباره تلاش کنید.",
+    "base.ui.pagination.perPageCount": "تعداد نمایش در هر صفحه",
+    "base.ui.pagination.totalCount": "تعداد کل: ",
+    "base.ui.radio.error": "این فیلد الزامی می باشد.",
+    "base.ui.radio.loading": " Loading... ",
   }
 }
