--- a/apps/playground/public/locales/fa.json
+++ b/apps/playground/public/locales/fa.json
@@ -8,6 +8,8 @@
     "base.feature.login.password": "رمز عبور",
     "base.feature.login.rememberMe": "مرا به خاطر بسپار",
     "base.feature.dialog.open": "باز کردن دیالوگ",
+    "base.feature.dialog.item": "مورد",
+    "base.feature.dialog.items": "موارد",
     "base.feature.dialog.cancelButtonDefault": "انصراف",
     "base.feature.dialog.saveButtonDefault": "ذخیره",
     "base.feature.dialog.insufficientPermission": "شما دسترسی برای انجام این فعالیت را ندارید.",
@@ -25,6 +27,7 @@
     "base.feature.dialog.input.message": "با حذف مورد انتخاب شده دیگر قادر به بازگردانی آن‌ها نخواهید بود.",
     "base.feature.dialog.input.noButton": "خیر، لغو گردد",
     "base.feature.dialog.input.yesButton": "بله، تایید می‌کنم",
+    "base.feature.dialog.input.deleteButton": "حذف",
     "base.feature.imageUploader.noFetchFnError": "No fetchFn provided",
     "base.feature.imageUploader.noUploadFnError": "No uploadFn provided",
     "base.feature.table.filterMenu.submitButton": "فیلتر",
@@ -51,8 +54,6 @@
     "base.feature.table.addText": "اضافه کردن",
     "base.feature.table.editText": "تغییر دادن",
     "base.feature.table.newText": "جدید",
-    "base.feature.table.TrueText": "بله",
-    "base.feature.table.falseText": "خیر",
     "base.feature.table.activeText": "فعال",
     "base.feature.table.inactiveText": "غیرفعال",
     "base.feature.table.cellFormatting.total": "تعداد کل",
@@ -61,10 +62,15 @@
     "base.feature.table.cellFormatting.minutes": "دقیقه",
     "base.feature.table.cellFormatting.date": "تاریخ",
     "base.feature.table.cellFormatting.plateCountry": "ایران",
+    "base.feature.table.rowText": "ردیف",
     "base.feature.table.createDialog.subtitle": "مشخصات را وارد کنید و دکمه ذخیره را بزنید",
     "base.ui.loaderScreen.error": "در بارگزاری مشکلی به وجود آمد، لطفا دوباره تلاش کنید.",
     "base.ui.pagination.perPageCount": "تعداد نمایش در هر صفحه",
     "base.ui.pagination.totalCount": "تعداد کل: ",
+    "base.ui.pagination.previous": "قبلی",
+    "base.ui.pagination.next": "بعدی",
+    "base.ui.field.cancel": "نصراف",
+    "base.ui.field.apply": "ذخیره",
     "base.ui.radio.error": "این فیلد الزامی می باشد.",
     "base.ui.radio.loading": " Loading... ",
     "base.ui.select.searchOrAddValue": "مقداری را اضافه یا جستجو کنید...",
@@ -72,6 +78,32 @@
     "base.ui.select.nItemsSelected": "مورد انتخاب شده",
     "base.ui.select.chooseOptionalValue": "انتخاب مقدار اختیاری:",
     "base.ui.select.loading": "در حال بارگذاری..",
-    "base.ui.select.noItemsAvailable": "آیتمی موجود نیست."
+    "base.ui.select.noItemsAvailable": "آیتمی موجود نیست.",
+    "base.errors.control.required":"این فیلد الزامی می باشد.",
+    "base.errors.control.email":"این ایمیل درست نیست.",
+    "base.errors.control.nationalCode":"کد ملی نامعتبر است.",
+    "base.errors.control.unmatched":"مقدار این فیلد مطابقت ندارد.",
+    "base.errors.control.passwordMinLength":"پسورد باید ۸ کاراکتر یا بیشتر باشد.",
+    "base.errors.control.passwordChars":"پسورد باید شامل حروف و اعداد باشد.",
+    "base.errors.control.default":"مقدار این فیلد اشتباه میباشد.",
+    "base.errors.server.0":"اشکال در اتصال، اینترنت خود را چک کنید.",
+    "base.errors.server.401":"نشست شما منقضی شده، لطفا دوباره لاگین کنید.",
+    "base.errors.server.403":"شما دسترسی برای ادامه ندارید.",
+    "base.errors.server.404":"مقصد مورد نظر یافت نشد.",
+    "base.errors.server.500":"اشکالی در سرور رخ داده.",
+    "base.errors.server.503":"سرور غیر فعال میباشد.",
+    "base.errors.server.default":"ارور",
+    "base.errors.api.default":"نام کاربری یا رمز عبور صحیح نمیباشد",
+    "base.errors.permissionGuard.userAccessDenied":"این کاربر به پنل دسترسی ندارد.",
+    "base.errors.auth.yourAccessDenied":"شما دسترسی به پنل را ندارید.",
+    "base.permissions.crudActions.create":"افزودن",
+    "base.permissions.crudActions.update":"ویرایش",
+    "base.permissions.crudActions.read":"دیدن صفحه",
+    "base.permissions.crudActions.delete":"حذف",
+    "base.permissions.crudActions.print":"پرینت",
+    "base.permissions.crudActions.export":"خروجی اکسل",
+    "base.permissions.crudActions.output":"خروجی",
+    "base.values.trueText": "بله",
+    "base.values.falseText": "خیر",
   }
 }
