--- a/apps/playground/public/locales/fa.json
+++ b/apps/playground/public/locales/fa.json
@@ -28,6 +28,10 @@
     "base.feature.dialog.input.noButton": "خیر، لغو گردد",
     "base.feature.dialog.input.yesButton": "بله، تایید می‌کنم",
     "base.feature.dialog.input.deleteButton": "حذف",
+    "base.feature.dialog.delete.titleBeforeItemName": "آیا از حذف ",
+    "base.feature.dialog.delete.titleAfterItemName": " انتخاب شده مطمئن هستید؟",
+    "base.feature.dialog.delete.captionBeforeItemName": "با حذف ",
+    "base.feature.dialog.delete.captionAfterItemName": "انتخاب شده دیگر قادر به بازگردانی آن‌ها نخواهید بود. آیا حذف اطلاعات را تایید میکنید؟",
     "base.feature.imageUploader.noFetchFnError": "No fetchFn provided",
     "base.feature.imageUploader.noUploadFnError": "No uploadFn provided",
     "base.feature.table.filterMenu.submitButton": "فیلتر",
