--- a/apps/playground/public/locales/fa.json
+++ b/apps/playground/public/locales/fa.json
@@ -40,6 +40,8 @@
     "base.feature.table.filters.equals": "برابر با",
     "base.feature.table.filters.greaterThan": "بیشتر از",
     "base.feature.table.filters.lowerThan": "کمتر از",
+    "base.feature.table.filters.removeFilters": "حذف فیلتر ها",
+    "base.feature.table.filters.filter": "فیلترا",
     "base.feature.table.formMenu.caption": "مشخصات را وارد کنید و دکمه ثبت را بزنید",
     "base.feature.table.formMenu.cancelButton": "لغو",
     "base.feature.table.formMenu.submitButton": "ثبت",
@@ -77,6 +79,7 @@
     "base.ui.field.apply": "ذخیره",
     "base.ui.radio.error": "این فیلد الزامی می باشد.",
     "base.ui.radio.loading": " Loading... ",
+    "base.ui.select.selectAll": "انتخاب تمام موارد",
     "base.ui.select.searchOrAddValue": "مقداری را اضافه یا جستجو کنید...",
     "base.ui.select.search": "جستجو در موارد ...",
     "base.ui.select.nItemsSelected": "مورد انتخاب شده",
@@ -108,6 +111,6 @@
     "base.permissions.crudActions.export":"خروجی اکسل",
     "base.permissions.crudActions.output":"خروجی",
     "base.values.trueText": "بله",
-    "base.values.falseText": "خیر",
+    "base.values.falseText": "خیر"
   }
 }
