fix - translation in fa.json and header table

--- a/apps/playground/public/locales/fa.json
+++ b/apps/playground/public/locales/fa.json
@@ -42,7 +42,7 @@
     "base.feature.table.filters.greaterThan": "بیشتر از",
     "base.feature.table.filters.lowerThan": "کمتر از",
     "base.feature.table.filters.removeFilters": "حذف فیلتر ها",
-    "base.feature.table.filters.filter": "فیلترا",
+    "base.feature.table.filters.filter": "فیلتر ها",
     "base.feature.table.formMenu.caption": "مشخصات را وارد کنید و دکمه ثبت را بزنید",
     "base.feature.table.formMenu.cancelButton": "لغو",
     "base.feature.table.formMenu.submitButton": "ثبت",
@@ -56,6 +56,7 @@
     "base.feature.table.header.selection.isSelected": "انتخاب شده است",
     "base.feature.table.header.exportExcel": "خروجی اکسل",
     "base.feature.table.header.print": "پرینت",
+    "base.feature.table.header.refresh": "بروزرسانی",
     "base.feature.table.header.addText": "اضافه کردن",
     "base.feature.table.emptyValue": "-",
     "base.feature.table.addText": "اضافه کردن",
